--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Comprehensive and SEO-optimized Calculator Hub for Age, SIP, BMI, LIC, Loan, and 7th Pay Commission calculations.">
   <meta name="keywords" content="Age Calculator, SIP Calculator, BMI Calculator, LIC Calculator, Loan Calculator, 7th Pay Calculator, Financial Tools">
   <meta name="author" content="Your Name">
-  <title>SEO-Friendly Calculator Hub | Age, SIP, Loan & More</title>
+  <title>Calculator Hub | Age, SIP, Loan & More</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script type="application/ld+json">
 {
