--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Comprehensive and SEO-optimized Calculator Hub for Age, SIP, BMI, LIC, Loan, and 7th Pay Commission calculations.">
   <meta name="keywords" content="Age Calculator, SIP Calculator, BMI Calculator, LIC Calculator, Loan Calculator, 7th Pay Calculator, Financial Tools">
-  <meta name="author" content="Your Name">
+  <meta name="Gaurav Kumar" content="Calculator">
+  <meta name="google-site-verification" content="swO1JbQr2bdEpd28KchxrV07XsJCCBE6ojdH6qcgxhc">
+
   <title>Calculator Hub | Age, SIP, Loan & More</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script type="application/ld+json">
