--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="google-site-verification" content="swO1JbQr2bdEpd28KchxrV07XsJCCBE6ojdH6qcgxhc" />
 
 
-  <title>Calculator Hub | Age, SIP, Loan & More</title>
+  <title>MyCalculatorHub | Age, SIP, Loan & More</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script type="application/ld+json">
 {
